# py-histogram-filter

./: .gitignore  LICENSE  README.md  setup.cfg
.github/workflows/: code_format_check.yml
pybhf/: filter.py  grid.py
tests/: test_filter.py  test_grid.py  test_grid_axis.py
