[metadata]
name = pybhf
version = 0.0.1
author = Troi Williams
description = Provides a base class and tools for implementing a Bayes Histogram Filter.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/troiwill/py-histogram-filter
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    numpy >= 1.24.4
    importlib-metadata; python_version >= "3.8"
package_dir =
    = .
packages = find:
python_requires = >= 3.8

[options.packages.find]
where = .
exclude =
    dist*
    tests*
